Replaced nested selectors with classes.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </div>
     </div>
     <div class="third inlineBlocksContainer">
-        <div>9</div>
-        <div>
-            <div>10</div>
-            <div class="inlineBlocksContainer">
-                <div>11</div>
-                <div>
-                    <div>12</div>
-                    <div>13</div>
+        <div class="third1">9</div>
+        <div class="third2">
+            <div class="third3">10</div>
+            <div class="third3 inlineBlocksContainer">
+                <div class="third4">11</div>
+                <div class="third4">
+                    <div class="third5">12</div>
+                    <div class="third5">13</div>
                 </div>
             </div>
         </div>
