Base implementation for "Floats" assignment.

--- a/index.html
+++ b/index.html
@@ -6,36 +6,43 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div class="container">
-    <div class="first inlineBlocksContainer">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
+<header class="heading">
+    <div class="container btn">
+    <a class="link" href="float.html">Floats</a>
     </div>
-    <div class="second inlineBlocksContainer">
-        <div>
-            <div>4</div>
-            <div>5</div>
+</header>
+<main class="container">
+    <div class="projectContainer">
+        <div class="first inlineBlocksContainer">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
         </div>
-        <div>
-            <div>6</div>
-            <div>7</div>
-            <div>8</div>
+        <div class="second inlineBlocksContainer">
+            <div>
+                <div>4</div>
+                <div>5</div>
+            </div>
+            <div>
+                <div>6</div>
+                <div>7</div>
+                <div>8</div>
+            </div>
         </div>
-    </div>
-    <div class="third inlineBlocksContainer">
-        <div class="third1">9</div>
-        <div class="third2">
-            <div class="third3">10</div>
-            <div class="third3 inlineBlocksContainer">
-                <div class="third4">11</div>
-                <div class="third4">
-                    <div class="third5">12</div>
-                    <div class="third5">13</div>
+        <div class="third inlineBlocksContainer">
+            <div class="third1">9</div>
+            <div class="third2">
+                <div class="third3">10</div>
+                <div class="third3 inlineBlocksContainer">
+                    <div class="third4">11</div>
+                    <div class="third4">
+                        <div class="third5">12</div>
+                        <div class="third5">13</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</main>
 </body>
 </html>
