Replaced nested selectors with classes.

--- a/float.html
+++ b/float.html
@@ -31,11 +31,11 @@
         </div>
         <div class="thirdFloat clearfix">
             <div>9</div>
-            <div>
+            <div class="thirdFloatChild1">
                 <div>10</div>
-                <div>
+                <div class="thirdFloatChild2">
                     <div class="clearfix">11</div>
-                    <div>
+                    <div class="thirdFloatChild3">
                         <div>12</div>
                         <div>13</div>
                     </div>
