--- a/float.html
+++ b/float.html
@@ -19,23 +19,23 @@
             <div>3</div>
         </div>
         <div class="secondFloat clearfix">
-            <div>
+            <div class="secondFloat1">
                 <div>4</div>
                 <div>5</div>
             </div>
-            <div>
+            <div class="secondFloat2">
                 <div>6</div>
                 <div>7</div>
                 <div>8</div>
             </div>
         </div>
         <div class="thirdFloat clearfix">
-            <div>9</div>
-            <div class="thirdFloatChild1">
-                <div>10</div>
-                <div class="thirdFloatChild2">
-                    <div class="clearfix">11</div>
-                    <div class="thirdFloatChild3">
+            <div class="thirdFloat1">9</div>
+            <div class="thirdFloat2">
+                <div class="thirdFloat2Child1">10</div>
+                <div class="thirdFloat2Child2 clearfix">
+                    <div class="thirdFloat3Child1">11</div>
+                    <div class="thirdFloat3Child2">
                         <div>12</div>
                         <div>13</div>
                     </div>
