Made blocks whit flex classes.

--- a/flex.html
+++ b/flex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Float</title>
+    <title>Flex</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -10,35 +10,35 @@
     <div class="container btn">
         <div>
             <a class="link" href="index.html">Inline Blocks</a>
-            <a class="link" href="flex.html">Flex</a>
+            <a class="link" href="float.html">Floats</a>
         </div>
     </div>
 </header>
 <main>
     <div class="container projectContainer">
-        <div class="firstFloat clearfix">
+        <div class="flex-box-1">
             <div>1</div>
             <div>2</div>
             <div>3</div>
         </div>
-        <div class="secondFloat clearfix">
-            <div class="secondFloat1">
+        <div class="flex-box-2">
+            <div class="flex-box-2-child-1">
                 <div>4</div>
                 <div>5</div>
             </div>
-            <div class="secondFloat2">
+            <div class="flex-box-2-child-2">
                 <div>6</div>
                 <div>7</div>
                 <div>8</div>
             </div>
         </div>
-        <div class="thirdFloat clearfix">
-            <div class="thirdFloat1">9</div>
-            <div class="thirdFloat2">
-                <div class="thirdFloat2Child1">10</div>
-                <div class="thirdFloat2Child2 clearfix">
-                    <div class="thirdFloat3Child1">11</div>
-                    <div class="thirdFloat3Child2">
+        <div class="flex-box-3">
+            <div>9</div>
+            <div>
+                <div>10</div>
+                <div class="flex-box-3-child-1">
+                    <div>11</div>
+                    <div class="flex-box-3-child-2">
                         <div>12</div>
                         <div>13</div>
                     </div>
