--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
 <header class="heading">
     <div class="container btn">
-    <a class="link" href="float.html">Floats</a>
+        <div>
+            <a class="link" href="float.html">Floats</a>
+            <a class="link" href="flex.html">Flex</a>
+        </div>
     </div>
 </header>
 <main class="container">
